@@ -8,6 +8,12 @@ File: corr.rwl.seg.R
   corr.rwl.seg() compute master series based on 'rwl', the user can use
   her own master series.
 - Ensures that rwl (and master) have consecutive years in increasing order
+- Uses full form "greater" instead of "g" in calls to cor.test()
+
+File: corr.series.seg.R
+-----------------------
+
+- Uses full form "greater" instead of "g" in calls to cor.test()
 
 2011-11-23 Mikko Korpela
 * CHANGES IN dplR VERSION 1.5.0
